update url git url in package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arshadkazmi42/custom-date-formatting.git"
+    "url": "https://github.com/arshadkazmi42/custom-date-formatting.git"
   },
   "keywords": [
     "\"date\"",
