--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-node_modules
+node_modules/
+jspm_packages/
 .vscode
+typings/
+.npm
+.eslintcache
+.node_repl_history
+*.tgz
+.yarn-integrity
+.env
+.cache
+.next
+.nuxt
+.vuepress/dist
+.serverless
+
+
