--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "chai": "^4.1.1",
     "jshint": "^2.9.6",
     "mocha": "^3.5.0",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.1",
+    "@types/chai": "^4.1.7",
+    "@types/jest": "^23.3.10"
   },
   "dependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/jest": "^23.3.10",
     "moment": "^2.18.1"
   }
 }
