--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/chai": "^4.1.7",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.11",
+    "ts-node": "^7.0.1",
     "chai": "^4.1.1",
     "jshint": "^2.9.6",
     "mocha": "^3.5.0",
