--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --reporter spec",
+    "test": "mocha test/index.js && mocha -r ts-node/register test/index.ts",
     "build": "tsc",
     "watch": "tsc --watch"
   },
@@ -35,10 +35,10 @@
     "@types/chai": "^4.1.7",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.11",
-    "ts-node": "^7.0.1",
     "chai": "^4.1.1",
     "jshint": "^2.9.6",
-    "mocha": "^3.5.0",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
     "typescript": "^3.2.1"
   },
   "dependencies": {
